crates/shiplog-render-md/tests/snapshots/output_quality__snapshot_html_angle_brackets_in_title.snap
---
source: crates/shiplog-render-md/tests/output_quality.rs
expression: md
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 1

**Events:** 1 PRs, 0 reviews, 0 manual

**Coverage:** Complete

**Sources:** github

## Workstreams

### HTML in titles

**Claim scaffolds**

- Problem: _fill_
- What I shipped: _fill_
- Why it mattered: _fill_
- Result: _fill_

_PRs: 1, Reviews: 0, Manual: 0_

## Receipts

### Workstream: HTML in titles

- [PR] Fix <div> rendering & HTML <script> injection (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)

## Coverage and Limits

Included:
- Sources: github
- Fetched events: not reported by query slices

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** github
- **Completeness:** Complete

## Appendix: All Receipts

### HTML in titles

- [PR] Fix <div> rendering & HTML <script> injection (1970-01-01) — [acme/repo](https://github.com/acme/repo/pull/1)

---

## File Artifacts

- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.yaml` (editable clustering)
- `manual_events.yaml` (non-GitHub work)
